Update plugin.ymls main file, along with addition of main file

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: DiscordConnect
 version: 1.0
 author: Sky
-main: sky.mulley.DiscordConnect
+main: sky.mulley.DiscordConnect.DiscordConnect
 load: POSTWORLD
