Added new Timeout configuration option

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,3 +8,5 @@ Minecraft Admin Channel ID (Leave blank to disable):
   adminchannel: ''
 Minecraft Text Channel Guild ID (Leave blank if you're not using the server link):
   mcguild: ''
+Bot Timeout Amount (Leave this default unless you know what you're doing):
+  timeout: 5
