Added console logger using Log4J

--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,15 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/VaultAPI-1.6.jar</systemPath>
         </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>2.11.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>2.11.1</version>
+            </dependency>
     </dependencies>
 </project>
