Added max character MC-Chat limit config option

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,3 +10,5 @@ Minecraft Text Channel Guild ID (Leave blank if you're not using the server link
   mcguild: ''
 Bot Timeout Amount (Leave this default unless you know what you're doing):
   timeout: 5
+Max Character Limit for MC-Chat:
+  maxcharacters: 40
