--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.austinv11</groupId>
+            <groupId>com.discord4j</groupId>
             <artifactId>Discord4J</artifactId>
-            <version>LATEST</version>
+            <version>2.10.1</version>
             <classifier>shaded</classifier>
             <scope>compile</scope>
         </dependency>
